<resources>
    <string name="app_name">Instant Sale</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_SNS_login">SNS Log in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_welcome">Instant Sale</string>
    <string name="already_singin">Already have an account?</string>

    <!-- Splash Activity-->

    <string name="welcome_msg">Instant Sale </string>
    <string name="logo_desc">Instant Sale LOGO </string>

    <!--Login Activity-->
    <string name="missing_logo">LOGO</string>
    <string name="login">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="rememberMe">Remember Me</string>
    <string name="facebook_app_id">183599905534421</string>
    <string name="fb_login_protocol_scheme">fb183599905534421</string>
    <string name="server_client_id">128957781645-4tpn09of1jnvs4p2vctnkekh4ff5aa45.apps.googleusercontent.com</string>
    <string name="reset_password">Reset Password </string>

    <!--Map Activity -->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Messaing Activity -->
    <string name="title_activity_messaging">Messaging</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- SaleInfo Fragment -->
    <string name="title_sale">Sales</string>
    <string name="title_store_name">Store Name</string>

    <!-- GeoFence Error -->
    <string name="geofence_not_available">GEOFENCE_NOT_AVAILABLE</string>
    <string name="geofence_too_many_geofences">GEOFENCE_TOO_MANY_GEOFENCES</string>
    <string name="geofence_too_many_pending_intents">GEOFENCE_TOO_MANY_PENDING_INTENTS</string>
    <string name="unknown_geofence_error">GEOFENCE_UNKNOWN_ERROR</string>

</resources>
