<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="capstone.msd.conestoga.instantsalenotifier.SignUpActivity">

    <!-- Login progress -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SIGN UP"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        tools:text="SIGN UP"
        android:layout_marginTop="30dp"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <!--USERNAME-->
        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
            android:drawablePadding="12dp"
            android:ems="20"
            android:hint="@string/prompt_username"
            android:inputType="text"
            android:autofillHints="@string/prompt_username"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db" />

        <!--Email-->
        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
            android:drawablePadding="12dp"
            android:ems="20"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db" />
        <!--Password-->

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="12dp"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff"
            tools:ignore="RtlHardcoded" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/rememberMe"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <LinearLayout
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:padding="2dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold">

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_signup"
                android:clickable="true"
                android:text="@string/createAcount"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

